# cs336

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
1-bpe-tokenizer/: README.md
basics/bpe_tokenizer/: NOTE.md  README.md  main.py  pretokenizer.py  test_pretokenizer.py  test_tokenizer.py  tokenizer.py
data/: download.sh
data/test/: vocab-test.txt
tests/: adapters.py
