[project]
name = "cs336-basics"
version = "0.1.0"
description = "CS336 Assignment 1: Basics — build a Transformer LM from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy",
    "einops",
    "einx",
    "jaxtyping",
    "regex",
    "tiktoken",
    "tqdm",
    "psutil",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cs336_basics"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
